[package]
name = "blockchain-node"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = "0.4"
hex = "0.4"
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"

[lib]
name = "blockchain"
path = "src/lib.rs"

[[bin]]
name = "blockchain-node"
path = "src/main.rs"

[[bin]]
name = "loadgen"
path = "src/bin/loadgen.rs"
